// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrayerRequest resolver creates a new prayer 1`] = `
Object {
  "data": Object {
    "addPrayer": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver flags a prayer request 1`] = `
Object {
  "data": Object {
    "flagPrayer": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from current person 1`] = `
Object {
  "data": Object {
    "userPrayers": Array [
      Object {
        "firstName": "Isaac",
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "firstName": "Rich",
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all prayers from groups 1`] = `
Object {
  "data": Object {
    "groupPrayers": Array [
      Object {
        "firstName": "Isaac",
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "firstName": "Rich",
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests 1`] = `
Object {
  "data": Object {
    "prayers": Array [
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "categoryId": 2,
        "firstName": "Isaac",
        "flagCount": 0,
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "isAnonymous": true,
        "lastName": "Hardy",
        "person": Object {
          "firstName": "Isaac",
          "id": "51",
          "lastName": "Hardy",
        },
        "prayerCount": 4,
        "requestedByPersonAliasId": 447217,
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "categoryId": 2,
        "firstName": "Rich",
        "flagCount": 0,
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "isAnonymous": true,
        "lastName": "Dubee",
        "person": Object {
          "firstName": "Isaac",
          "id": "51",
          "lastName": "Hardy",
        },
        "prayerCount": 4,
        "requestedByPersonAliasId": 447217,
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver gets all public prayer requests by campus 1`] = `
Object {
  "data": Object {
    "campusPrayers": Array [
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "firstName": "Isaac",
        "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
        "text": "Pray this works.",
      },
      Object {
        "campus": Object {
          "id": "16",
          "name": "Anderson",
        },
        "firstName": "Rich",
        "id": "PrayerRequest:965b6e6d7046a885bea4e300b5c0400d",
        "text": "Help me",
      },
    ],
  },
}
`;

exports[`PrayerRequest resolver increments prayed for a request 1`] = `
Object {
  "data": Object {
    "incrementPrayerCount": Object {
      "firstName": "Isaac",
      "id": "PrayerRequest:559b23fd0aa90e81b1c023e72e230fa1",
      "text": "Pray this works.",
    },
  },
}
`;
